// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks Ending Screen completed state 1`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

.reading-step .c2 {
  padding: 0;
}

.c2.c2.c2 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
    min-width: 750px;
  }
}

@media (min-width:1600px) {
  .c1 {
    min-width: 1000px;
  }
}

@media (max-width:999px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:601px) and (max-width:999px) {
  .c2 {
    padding: 25px 30px 140px;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 10px 25px 20px;
  }

  .exercise-step .c2 {
    padding: 8px;
  }

  .c2.c2 .question-feedback {
    margin-left: 0;
  }

  .c2.c2 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (min-width:1000px) {
  .video-step .c2 .openstax-exercise-badges,
  .interactive-step .c2 .openstax-exercise-badges {
    margin-right: 3.8rem;
  }
}

@media (max-width:600px) {
  .c2 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              You are done.
            </h1>
            <h3>
              Great job 
              answering all the questions
              .
            </h3>
            <a
              className="btn btn-default c3"
              href="/course/3"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Tasks Ending Screen completed state 2`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

.reading-step .c2 {
  padding: 0;
}

.c2.c2.c2 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
    min-width: 750px;
  }
}

@media (min-width:1600px) {
  .c1 {
    min-width: 1000px;
  }
}

@media (max-width:999px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:601px) and (max-width:999px) {
  .c2 {
    padding: 25px 30px 140px;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 10px 25px 20px;
  }

  .exercise-step .c2 {
    padding: 8px;
  }

  .c2.c2 .question-feedback {
    margin-left: 0;
  }

  .c2.c2 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (min-width:1000px) {
  .video-step .c2 .openstax-exercise-badges,
  .interactive-step .c2 .openstax-exercise-badges {
    margin-right: 3.8rem;
  }
}

@media (max-width:600px) {
  .c2 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              You are done.
            </h1>
            <h3>
              Great job 
              completing all the steps
              .
            </h3>
            <a
              className="btn btn-default c3"
              href="/course/3"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Tasks Ending Screen not started state 1`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

.reading-step .c2 {
  padding: 0;
}

.c2.c2.c2 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
    min-width: 750px;
  }
}

@media (min-width:1600px) {
  .c1 {
    min-width: 1000px;
  }
}

@media (max-width:999px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:601px) and (max-width:999px) {
  .c2 {
    padding: 25px 30px 140px;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 10px 25px 20px;
  }

  .exercise-step .c2 {
    padding: 8px;
  }

  .c2.c2 .question-feedback {
    margin-left: 0;
  }

  .c2.c2 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (min-width:1000px) {
  .video-step .c2 .openstax-exercise-badges,
  .interactive-step .c2 .openstax-exercise-badges {
    margin-right: 3.8rem;
  }
}

@media (max-width:600px) {
  .c2 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              No steps have been completed.
            </h1>
            <h4>
              <a
                href="/course/1/task/1"
                onClick={[Function]}
              >
                Begin work on assignment
              </a>
            </h4>
            <a
              className="btn btn-default c3"
              href="/course/1"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Tasks Ending Screen partial state 1`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

.reading-step .c2 {
  padding: 0;
}

.c2.c2.c2 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
    min-width: 750px;
  }
}

@media (min-width:1600px) {
  .c1 {
    min-width: 1000px;
  }
}

@media (max-width:999px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:601px) and (max-width:999px) {
  .c2 {
    padding: 25px 30px 140px;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 10px 25px 20px;
  }

  .exercise-step .c2 {
    padding: 8px;
  }

  .c2.c2 .question-feedback {
    margin-left: 0;
  }

  .c2.c2 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (min-width:1000px) {
  .video-step .c2 .openstax-exercise-badges,
  .interactive-step .c2 .openstax-exercise-badges {
    margin-right: 3.8rem;
  }
}

@media (max-width:600px) {
  .c2 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              Assignment is partially complete.
            </h1>
            <h3>
              You've completed 
              1
               of 
              2
               steps.
            </h3>
            <a
              className="btn btn-default c3"
              href="/course/2"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
